Fixed the footer to be on bottom page by wraping page in 2 DIVS

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
+.page_container {
+    @apply flex flex-col min-h-screen
+}
+.content_wraper{
+    @apply flex-1
+}
 /* NAVIGATION BAR */
 .navbar{
     @apply bg-black text-white flex flex-row sticky top-0 left-0 justify-start items-center
